# ctopt

./: README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
ctopt/: contrastive_augmentation.py  models.py  train.py  utils.py
figures/: celltypes_viz_visium.ipynb  curse_of_dimensionality.ipynb  gene_abundancy_hist.ipynb  plot_st_datasets.ipynb  retention.ipynb
figures/figs/: gene_abundancy_hist.eps
scripts/: metric.py
